Choose sex in profile and others
Automatically fetch sex from VK
Add buttons to notifications: for emails and telegram
Don't send new comment notification if reply your comment notification already has been sent
Add graphite events posting
Truncate email on profile page if it is very long

--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -7,6 +7,7 @@
   </configSections>
   <connectionStrings>
 	<add name="DefaultConnection" connectionString="Data Source=ANDGEIN-LAPTOP;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings>
 	<add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
