--- a/src/Notifications.Service/packages.config
+++ b/src/Notifications.Service/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="Graphite" version="1.3.0.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="OctoPack" version="3.6.1" targetFramework="net461" developmentDependency="true" />
 </packages>
