--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework.Functions" version="1.3.1" targetFramework="net46" />
   <package id="EPPlus" version="4.1.0" targetFramework="net45" />
+  <package id="Graphite" version="1.3.0.0" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
