--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -17,7 +17,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
+    <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;prefixKey=ulearn.local" />
   </connectionStrings>
   <appSettings file="private.settings">
     <!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
