--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -36,54 +36,44 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
-
     <!-- Данные для авторизации через ВКонтакте -->
     <add key="owin.vk.appId" value="5333292" />
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
-
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
        Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
     <add key="ulearn.coursesDirectory" value="" />
     <!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта. 
        Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
     <add key="ulearn.certificatesDirectory" value="" />
-
     <!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
        перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
     <add key="ulearn.requireHttps" value="false" />
-
     <!-- Секретная строка для вычисления секретных хешей -->
     <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
-
     <!-- Данные для интеграции с Телеграмом: -->
-
     <!-- Токен бота. Получать у t.me/BotFather -->
     <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Имя бота без знака @. Бот должен быть доступен по ссылке https://t.me/<botName> -->
     <add key="ulearn.telegram.botName" value="local_ulearn_me" />
-
     <!-- Канал в телеграме, куда отправлять новые комментарии (скоро выключится) -->
     <add key="ulearn.telegram.comments.channel" value="" />
     <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
     <add key="ulearn.telegram.errors.channel" value="" />
-
     <!-- Данные для установки веб-хука телеграма (https://core.telegram.org/bots/webhooks) -->
     <!-- Секрет, о котором будут знать только сервере Телеграма и сервер ulearn'а. Используется, чтобы никто не мог вызвать веб-хук самостоятельно -->
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
     <add key="ulearn.telegram.webhook.domain" value="ca27fe85.ngrok.io" />
-
     <!-- Конфигурация для сервиса Контур.Спам: http://siberia/spam/  (работает только во внутренней сети СКБ Контур) -->
-	<add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
-	<add key="ulearn.spam.login" value="ulearn" />
-	<add key="ulearn.spam.password" value="w32eRrn7tz" />
+    <add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
+    <add key="ulearn.spam.login" value="ulearn" />
+    <add key="ulearn.spam.password" value="w32eRrn7tz" />
     <!-- Канал, куда отправляются письма о восстановлении пароля -->
-	<add key="ulearn.spam.channels.passwords" value="passwords" />
+    <add key="ulearn.spam.channels.passwords" value="passwords" />
     <!-- Канал, куда отправляются письма для подтверждения электронной почты -->
     <add key="ulearn.spam.channels.emailConfirmations" value="email_confirmations" />
     <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content, button, button_link, button_text, content_after_button -->
     <add key="ulearn.spam.templates.withButton" value="with_button" />
-
   </appSettings>
   <log4net>
     <root>
@@ -110,7 +100,7 @@
   -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.6">
+    <compilation debug="true" targetFramework="4.6.1">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -274,6 +264,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20.0" newVersion="4.0.20.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Security.Cryptography.Algorithms" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
