--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -3,8 +3,8 @@
   <configSections>
 	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+	
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
 	<add name="DefaultConnection" connectionString="Data Source=ANDGEIN-LAPTOP;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="statsd" connectionString="address=graphite-test.skbkontur.ru;port=8125;transport=Tcp;prefixKey=ulearn.local" />
@@ -30,7 +30,7 @@
 
   </appSettings>
   <startup>
-	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <log4net>
 	<root>
@@ -139,6 +139,14 @@
 		<dependentAssembly>
 			<assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 			<bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.0.20.0" newVersion="4.0.20.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.Security.Cryptography.Algorithms" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
 		</dependentAssembly>
 	</assemblyBinding>
   </runtime>
