--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -1,17 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
-  <package id="DotNetZip" version="1.10.1" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="NHttp" version="0.1.9.0" targetFramework="net461" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net47" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net47" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net47" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net47" />
+  <package id="NHttp" version="0.1.9.0" targetFramework="net47" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net47" />
+  <package id="System.Console" version="4.0.0" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net47" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net47" />
+  <package id="System.IO" version="4.1.0" targetFramework="net47" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net47" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net47" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net47" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net47" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net47" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net47" />
 </packages>
