--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -8,7 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <sectionGroup name="elmah">
+    
+  <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
@@ -26,16 +27,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
     <!-- Elmah (https://github.com/alexbeletsky/elmah-mvc) — это сборщик ошибок и исключений. Доступен админам по адресу /elmah -->
+    <!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
-    <!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
     <add key="elmah.mvc.requiresAuthentication" value="false" />
     <add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
     <add key="elmah.mvc.allowedRoles" value="*" />
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+    
+    
     <!-- Данные для авторизации через ВКонтакте -->
     <add key="owin.vk.appId" value="5333292" />
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
@@ -74,7 +78,7 @@
     <add key="ulearn.spam.channels.emailConfirmations" value="email_confirmations" />
     <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content, button, button_link, button_text, content_after_button -->
     <add key="ulearn.spam.templates.withButton" value="with_button" />
-  </appSettings>
+  </appSettings>   
   <log4net>
     <root>
       <level value="DEBUG" />
@@ -100,7 +104,7 @@
   -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.6.1">
+    <compilation debug="true" targetFramework="4.7">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -111,7 +115,8 @@
     <customErrors mode="Off" />
     <globalization culture="ru-RU" uiCulture="ru" />
     <httpModules>
-      <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" />
+      <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" />      
+      <!-- <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />-->
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
@@ -120,7 +125,8 @@
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="FormsAuthenticationModule" />
-      <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" preCondition="managedHandler" />
+      <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" preCondition="managedHandler" />      
+      <!--<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />-->
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
@@ -138,13 +144,13 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
-    <validation validateIntegratedModeConfiguration="false" />
+    
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add name="CertificatesStaticHandler" path="Certificate/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+         <add name="CertificatesStaticHandler" path="Certificate/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+         <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+         <remove name="OPTIONSVerbHandler" />
+         <remove name="TRACEVerbHandler" />
+         <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <rewrite>
       <rules>
@@ -158,24 +164,12 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>
+  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
@@ -267,11 +261,47 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.20.0" newVersion="4.0.20.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Security.Cryptography.Algorithms" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.InteropServices" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Linq" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IO" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reflection" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Linq.Expressions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
