--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -1,109 +1,110 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
-  <package id="ApprovalTests" version="3.0.13" targetFramework="net46" />
-  <package id="ApprovalUtilities" version="3.0.13" targetFramework="net46" />
-  <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net45" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net46" />
-  <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
-  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
-  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="EntityFramework.Functions" version="1.4.0" targetFramework="net461" />
-  <package id="EPPlus" version="4.1.0" targetFramework="net45" />
-  <package id="Graphite" version="1.3.0.0" targetFramework="net46" />
-  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net46" />
-  <package id="jQuery" version="3.1.1" targetFramework="net46" />
-  <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
-  <package id="log4net" version="2.0.8" targetFramework="net46" />
-  <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net46" />
-  <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net46" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net46" />
-  <package id="Modernizr" version="2.8.3" targetFramework="net46" />
-  <package id="MSBuild" version="0.1.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
-  <package id="NUnit" version="3.7.1" targetFramework="net461" />
-  <package id="NUnit.Console" version="3.6.1" targetFramework="net46" />
-  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net46" />
-  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
-  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net46" />
-  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
-  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
-  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
-  <package id="OctoPack" version="3.6.1" targetFramework="net46" developmentDependency="true" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net46" />
-  <package id="Respond" version="1.4.2" targetFramework="net46" />
-  <package id="Spam.Api.Client" version="1.3.2.1" targetFramework="net46" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
-  <package id="System.Console" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net46" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="net46" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net46" />
-  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net46" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.3.1" targetFramework="net46" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="Telegram.Bot" version="10.4.0" targetFramework="net46" />
-  <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net46" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
+  <package id="ApprovalTests" version="3.0.13" targetFramework="net47" />
+  <package id="ApprovalUtilities" version="3.0.13" targetFramework="net47" />
+  <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net47" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net47" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net47" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net47" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
+  <package id="EntityFramework.Functions" version="1.4.0" targetFramework="net47" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net47" />
+  <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
+  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net47" />
+  <package id="jQuery" version="3.1.1" targetFramework="net47" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net47" />
+  <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net47" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net47" />
+  <package id="MSBuild" version="0.1.2" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net47" />
+  <package id="NUnit" version="3.7.1" targetFramework="net47" />
+  <package id="NUnit.Console" version="3.6.1" targetFramework="net47" />
+  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net47" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net47" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net47" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net47" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net47" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net47" />
+  <package id="OctoPack" version="3.6.1" targetFramework="net47" developmentDependency="true" />
+  <package id="Owin" version="1.0" targetFramework="net47" />
+  <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net47" />
+  <package id="Respond" version="1.4.2" targetFramework="net47" />
+  <package id="Spam.Api.Client" version="1.3.2.1" targetFramework="net47" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net47" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net47" />
+  <package id="System.Console" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net47" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
+  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net47" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
+  <package id="Telegram.Bot" version="10.4.0" targetFramework="net47" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
