Change path for request.time metrics and add Graphite.Elmah
Rename CourseToole project

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -9,12 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     
-  <sectionGroup name="elmah">
+	<sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
+	<section name="graphite.elmah" type="Graphite.Configuration.GraphiteElmahConfiguration, Graphite.Elmah" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -319,11 +320,12 @@
     <!--errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200" /-->
     <errorLog type="Elmah.XmlFileErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" logPath="~/App_Data" />
     <errorFilter>
-      <test>
+      <test xmlns:my="http://schemas.microsoft.com/clr/nsassem/Graphite/Graphite.Elmah">
         <equal binding="HttpStatusCode" value="404" type="Int32" />
-      </test>
+      <my:log /></test>
     </errorFilter>
   </elmah>
+  <graphite.elmah xmlns="http://github.com/peschuster/Graphite/Configuration" key="web.elmah.errors" type="counter" target="statsd" />
   <location path="elmah">
     <!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
     <system.web>
