--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -12,6 +12,7 @@
   <package id="EntityFramework.Functions" version="1.4.0" targetFramework="net47" />
   <package id="EPPlus" version="4.1.0" targetFramework="net47" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
+  <package id="Graphite.Elmah" version="1.0.3.0" targetFramework="net47" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net47" />
   <package id="jQuery" version="3.1.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
