--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -101,6 +101,9 @@
     <Reference Include="Graphite, Version=1.3.0.0, Culture=neutral, PublicKeyToken=db1870846884bbb9, processorArchitecture=MSIL">
       <HintPath>..\packages\Graphite.1.3.0.0\lib\net40-Client\Graphite.dll</HintPath>
     </Reference>
+    <Reference Include="Graphite.Elmah, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Graphite.Elmah.1.0.3.0\lib\net40\Graphite.Elmah.dll</HintPath>
+    </Reference>
     <Reference Include="Graphite.Web, Version=1.0.0.0, Culture=neutral, PublicKeyToken=db1870846884bbb9, processorArchitecture=MSIL">
       <HintPath>..\ThirdParty\Graphite.Web.1.0.0.0\Graphite.Web.dll</HintPath>
     </Reference>
