RunCsJob: kill sandbox process in any situation
Add sentry.io integration for client-side error logging
Disable graphite metrics if coresponding connection string is empty

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -19,11 +19,13 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="statsd" connectionString="address=graphite-test.kontur;port=8125;prefixKey=ulearn.local" />
+    <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
+    <add name="statsd" connectionString="" />
   </connectionStrings>
   <appSettings file="private.settings">
     <!-- runnerToken должен совпадать в настройках Ulearn.Web и RunCsJob (или RunCsJob.Service в случае запуска через Windows-службу) -->
     <add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
+
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -43,6 +45,7 @@
     <!-- Данные для авторизации через ВКонтакте -->
     <add key="owin.vk.appId" value="5333292" />
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
        Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
     <add key="ulearn.coursesDirectory" value="" />
@@ -54,7 +57,8 @@
     <add key="ulearn.requireHttps" value="false" />
     <!-- Секретная строка для вычисления секретных хешей -->
     <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
-    <!-- Данные для интеграции с Телеграмом: -->
+
+    <!-- Данные для интеграции с Телеграмом -->
     <!-- Токен бота. Получать у t.me/BotFather -->
     <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Имя бота без знака @. Бот должен быть доступен по ссылке https://t.me/<botName> -->
@@ -68,6 +72,7 @@
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
     <add key="ulearn.telegram.webhook.domain" value="ca27fe85.ngrok.io" />
+
     <!-- Конфигурация для сервиса Контур.Спам: http://siberia/spam/  (работает только во внутренней сети СКБ Контур) -->
     <add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
     <add key="ulearn.spam.login" value="ulearn" />
@@ -76,7 +81,7 @@
     <add key="ulearn.spam.channels.passwords" value="passwords" />
     <!-- Канал, куда отправляются письма для подтверждения электронной почты -->
     <add key="ulearn.spam.channels.emailConfirmations" value="email_confirmations" />
-    <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content, button, button_link, button_text, content_after_button -->
+    <!-- Имя шаблона для письма с кнопкой. В шаблоне поддерживаются переменные: title, content, button, button_link, button_text, content_after_button -->
     <add key="ulearn.spam.templates.withButton" value="with_button" />
   </appSettings>   
   <log4net>
@@ -116,7 +121,6 @@
     <globalization culture="ru-RU" uiCulture="ru" />
     <httpModules>
       <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" />      
-      <!-- <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />-->
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
@@ -126,7 +130,6 @@
       <remove name="FormsAuthentication" />
       <remove name="FormsAuthenticationModule" />
       <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" preCondition="managedHandler" />      
-      <!--<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />-->
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
@@ -317,7 +320,6 @@
   </entityFramework>
   <elmah>
     <security allowRemoteAccess="1" />
-    <!--errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200" /-->
     <errorLog type="Elmah.XmlFileErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" logPath="~/App_Data" />
     <errorFilter>
       <test xmlns:my="http://schemas.microsoft.com/clr/nsassem/Graphite/Graphite.Elmah">
